# advent2024

./: .clang-format  .gitignore  CMakeLists.txt
day1/: day1.vcxproj  day1.vcxproj.filters  main.cpp
day1/x64_Debug/: day1.exe.recipe  day1.vcxproj.FileListAbsolute.txt  vc143.idb
day1/x64_Debug/day1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  day1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
day2/: day2.vcxproj  day2.vcxproj.filters  main.cpp
day2/x64_Debug/: day2.exe.recipe  day2.vcxproj.FileListAbsolute.txt  vc143.idb
day2/x64_Debug/day2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/day1/: main.cpp
src/day2/: main.cpp
src/day3/: main.cpp
